# JamGame

./: .gitignore  CMakeLists.txt
src/: AnimationComponent.cpp  AnimationComponent.h  Config.h  Cube.cpp  Cube.h  Game.cpp  Game.h  IsometricUtils.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  main.cpp
src/Audio/: AudioManager.cpp  AudioManager.h
src/Core/: Config.h  Game.cpp  Game.h  main.cpp
src/Entities/: Follower.cpp  Follower.h  Player.cpp  Player.h
src/Graphics/: AnimationComponent.cpp  AnimationComponent.h  CharacterAnimator.cpp  CharacterAnimator.h  FollowerAnimator.cpp  FollowerAnimator.h  IsometricUtils.cpp  IsometricUtils.h  PlayerAnimator.cpp  PlayerAnimator.h  Renderer.cpp  Renderer.h
src/Props/: Prop.cpp  Prop.h
src/Tools/: CollisionUtils.hpp  Editor.cpp  Editor.hpp  GameObject.cpp  GameObject.hpp  ResourceManager.cpp  ResourceManager.hpp  level1.json  level2.json  level3.json
src/UI/: Menu.cpp  Menu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h
src/World/: Cube.h  Map.cpp  Map.h
